<resources>
    <string name="app_name">OptionsMenu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_one">One</string>
    <string name="menu_two">Two</string>
    <string name="menu_activity_one">Activity One</string>
    <string name="menu_activity_two">Activity Two</string>
    <string name="menu_search">Search</string>
    <string name="menu_discard">Discard</string>
</resources>
