<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/menu_settings"
    android:title="@string/menu_settings"
    app:showAsAction="never">
</item>
    <item android:id="@+id/menu_one"
        android:title="@string/menu_one"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/menu_two"
        android:title="@string/menu_two"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/menu_activity_one"
        android:title="@string/menu_activity_one"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/menu_activity_two"
        android:title="@string/menu_activity_two"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/menu_discard"
        android:icon="@drawable/ic_discard"
        android:title=""
        app:showAsAction="always">
    </item>
    <item android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title=""
        app:showAsAction="always">
    </item>


</menu>